# aletheia-lora

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  MODEL_CARD.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: ARXIV_V2_PATCH.md  EVIDENCE_BUNDLE.md  PAPERS_WITH_CODE.md  PYPI_RELEASE.md
examples/: quick_start.py
huggingface/: README.md
notebooks/: quickstart_simulated_probe.ipynb
src/aletheia_lora/: __init__.py  config.py  probe.py  selection.py
tests/: test_aletheia_lora.py
